--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,22 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.0'
+        subprojects { subproject ->
+            afterEvaluate{
+            if(subproject.name == "react-native-camera" ){
+                dependencies {
+                compile ("com.google.android.gms:play-services-vision:11.8.0") {
+                    force = true;
+                }
+                }
+            }
+            }
+        }
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,8 +30,23 @@ allprojects {
         mavenLocal()
         jcenter()
         maven {
+            url 'https://maven.google.com'
+        }
+        maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        google()
     }
+}
+
+ext {
+    googlePlayServicesVersion = "+" // default: "+"
+    firebaseVersion = "+" // default: "+"
+
+    // Other settings
+    compileSdkVersion = 26 // default: 23
+    buildToolsVersion = "26.0.1" // default: "23.0.1"
+    targetSdkVersion = 22 // default: 23
+    supportLibVersion = "22.1.1" // default: 23.1.1
 }
