--- a/package.json
+++ b/package.json
@@ -6,12 +6,31 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": [
+      "./src/fonts/"
+    ]
+  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lottie-react-native": "^2.5.9",
+    "mobx": "^4.1.1",
+    "mobx-react": "^5.2.8",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-camera": "^1.3.0",
+    "react-native-geolocation-service": "^1.1.0",
+    "react-native-maps": "^0.22.0",
+    "react-native-modal": "^6.5.0",
+    "react-native-picker-select": "^4.4.0",
+    "react-native-push-notification": "^3.1.1",
+    "react-native-tts": "^2.0.0",
+    "react-native-voice": "^0.2.6",
+    "react-navigation": "^2.18.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-native": "4.0.1",
     "jest": "23.6.0",
     "react-test-renderer": "16.3.1"
